탭바 기초구성

--- a/OP.GG Clone/OP.GG Clone/Base.lproj/Main.storyboard
+++ b/OP.GG Clone/OP.GG Clone/Base.lproj/Main.storyboard
@@ -1,24 +1,212 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ByO-nF-zvs">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OP_GG_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="qMM-RX-Fut"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2016.8" y="-27.339901477832512"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Rk6-0S-TX0">
+            <objects>
+                <viewController id="EKU-8C-wIV" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XVP-Ga-Xiz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="rc6-gU-DGl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ekB-e7-TKZ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jjp-BL-o0n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2015.2" y="663.54679802955673"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1aU-ZE-ymV">
+            <objects>
+                <viewController id="Ubk-sZ-da0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bnP-b1-BLK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="1PR-vd-Nzz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="QDd-Nq-6Sx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gx7-uS-ojy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2015.2" y="1380.2955665024631"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="QOk-f4-2LX">
+            <objects>
+                <viewController id="Yy4-z3-gxB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qyu-Zn-Dlx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="yrr-B4-DYS"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="AD5-4Z-Wgk"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dRf-hy-4l1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2015.2" y="2073.3990147783252"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kYt-HM-gJT">
+            <objects>
+                <viewController id="E9o-ZU-YYi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="G5y-M7-cFF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Ohz-Rd-JTI"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="m0B-vl-u92"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hj2-EO-Nva" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2015.2" y="2791.6256157635471"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dJU-sM-zv9">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ByO-nF-zvs" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="ASm-LZ-QBb"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5yH-10-pl1">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="afX-L8-T3f" kind="relationship" relationship="viewControllers" id="QEn-Ix-Ogz"/>
+                        <segue destination="fz3-xg-1fT" kind="relationship" relationship="viewControllers" id="AVK-1a-kvn"/>
+                        <segue destination="T5A-mJ-D4T" kind="relationship" relationship="viewControllers" id="BnJ-2j-9M7"/>
+                        <segue destination="2OF-7Z-Jjw" kind="relationship" relationship="viewControllers" id="UY7-6w-68y"/>
+                        <segue destination="pRj-5M-qy7" kind="relationship" relationship="viewControllers" id="gTR-7T-aSE"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wpw-d2-Ork" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1009" y="2792"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="WAk-cg-6Sr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="afX-L8-T3f" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="noy-kQ-h3c"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cGc-2M-MjZ">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="czg-dt-Rcs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DWH-zO-cp9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1074.4000000000001" y="-27.339901477832512"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="O1q-1z-7ny">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fz3-xg-1fT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="TmI-So-0hd"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ono-YX-aj4">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kmM-TD-fy2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.8" y="663.54679802955673"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="jvD-Uc-rju">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="T5A-mJ-D4T" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="h3E-Wy-A0u"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dPj-UH-khW">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ubk-sZ-da0" kind="relationship" relationship="rootViewController" id="f5A-gN-itj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zzB-o9-O3y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.8" y="1380.2955665024631"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="73P-hK-DiO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2OF-7Z-Jjw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="RhY-S7-xxB"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ze2-uH-gTw">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Yy4-z3-gxB" kind="relationship" relationship="rootViewController" id="7xs-ub-AQG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RFN-o8-8Ld" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.8" y="2073.3990147783252"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="VFn-cu-fPr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pRj-5M-qy7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dka-cb-cHg"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="e7d-GE-LMZ">
+                        <rect key="frame" x="0.0" y="47" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="E9o-ZU-YYi" kind="relationship" relationship="rootViewController" id="FOR-pb-OSQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zOw-Tf-tjn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1072.8" y="2791.6256157635471"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
