--- a/OP.GG Clone/OP.GG Clone/Resource/Storyboard/Base.lproj/Main.storyboard
+++ b/OP.GG Clone/OP.GG Clone/Resource/Storyboard/Base.lproj/Main.storyboard
@@ -9,17 +9,33 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OP_GG_Clone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="OP_GG_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RpS-i4-nBs">
+                                <rect key="frame" x="0.0" y="91" width="375" height="721"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="RpS-i4-nBs" secondAttribute="bottom" id="2bK-x1-Qs7"/>
+                            <constraint firstItem="RpS-i4-nBs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LiL-XS-xrY"/>
+                            <constraint firstItem="RpS-i4-nBs" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aI9-bI-30h"/>
+                            <constraint firstItem="RpS-i4-nBs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sff-u2-ouP"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qMM-RX-Fut"/>
+                    <connections>
+                        <outlet property="homeTableView" destination="RpS-i4-nBs" id="VXT-lm-dle"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,6 +112,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="ASm-LZ-QBb"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5yH-10-pl1">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
