--- a/OP.GG Clone/OP.GG Clone/Resource/Storyboard/Base.lproj/Main.storyboard
+++ b/OP.GG Clone/OP.GG Clone/Resource/Storyboard/Base.lproj/Main.storyboard
@@ -14,32 +14,106 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="OP_GG_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RpS-i4-nBs">
-                                <rect key="frame" x="0.0" y="91" width="375" height="721"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h6d-Gz-VlZ">
+                                <rect key="frame" x="0.0" y="91" width="375" height="1326"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="epR-0i-uAo">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1408"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tFc-6t-RMs">
+                                                <rect key="frame" x="0.0" y="20" width="375" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="KiY-n0-XZd"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K83-bE-UZG">
+                                                <rect key="frame" x="0.0" y="156" width="375" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="iH7-LF-HZq"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="10b-2F-mOH">
+                                                <rect key="frame" x="0.0" y="292" width="375" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="hAe-98-vD0"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UpQ-MP-Rsz">
+                                                <rect key="frame" x="0.0" y="428" width="375" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="TYu-oP-u7V"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAc-jT-uP9">
+                                                <rect key="frame" x="0.0" y="564" width="375" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="uJu-1e-tPe"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="DAc-jT-uP9" firstAttribute="top" secondItem="UpQ-MP-Rsz" secondAttribute="bottom" constant="8" symbolic="YES" id="2QT-17-h5l"/>
+                                            <constraint firstItem="UpQ-MP-Rsz" firstAttribute="leading" secondItem="epR-0i-uAo" secondAttribute="leading" id="2ZQ-rs-x26"/>
+                                            <constraint firstAttribute="height" constant="1408" id="35N-OZ-bEQ"/>
+                                            <constraint firstItem="K83-bE-UZG" firstAttribute="top" secondItem="tFc-6t-RMs" secondAttribute="bottom" constant="8" symbolic="YES" id="6Up-Yh-awC"/>
+                                            <constraint firstAttribute="trailing" secondItem="10b-2F-mOH" secondAttribute="trailing" id="8D8-Ov-eOu"/>
+                                            <constraint firstItem="UpQ-MP-Rsz" firstAttribute="top" secondItem="10b-2F-mOH" secondAttribute="bottom" constant="8" symbolic="YES" id="CT7-zS-8EG"/>
+                                            <constraint firstAttribute="trailing" secondItem="DAc-jT-uP9" secondAttribute="trailing" id="I7M-gs-XTZ"/>
+                                            <constraint firstItem="tFc-6t-RMs" firstAttribute="leading" secondItem="epR-0i-uAo" secondAttribute="leading" id="K6A-rc-q1F"/>
+                                            <constraint firstAttribute="trailing" secondItem="tFc-6t-RMs" secondAttribute="trailing" id="QBr-hS-YxX"/>
+                                            <constraint firstItem="10b-2F-mOH" firstAttribute="top" secondItem="K83-bE-UZG" secondAttribute="bottom" constant="8" symbolic="YES" id="emh-FG-egU"/>
+                                            <constraint firstItem="K83-bE-UZG" firstAttribute="leading" secondItem="epR-0i-uAo" secondAttribute="leading" id="fSd-9x-0gs"/>
+                                            <constraint firstItem="tFc-6t-RMs" firstAttribute="top" secondItem="epR-0i-uAo" secondAttribute="top" constant="20" symbolic="YES" id="iP0-vx-zW3"/>
+                                            <constraint firstAttribute="trailing" secondItem="UpQ-MP-Rsz" secondAttribute="trailing" id="j24-ZG-a6v"/>
+                                            <constraint firstItem="10b-2F-mOH" firstAttribute="leading" secondItem="epR-0i-uAo" secondAttribute="leading" id="nZ5-NA-h2Q"/>
+                                            <constraint firstAttribute="trailing" secondItem="K83-bE-UZG" secondAttribute="trailing" id="s1i-Bd-gCz"/>
+                                            <constraint firstItem="DAc-jT-uP9" firstAttribute="leading" secondItem="epR-0i-uAo" secondAttribute="leading" id="vr6-io-m52"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="epR-0i-uAo" firstAttribute="trailing" secondItem="999-Xa-F8G" secondAttribute="trailing" constant="375" id="18d-Vb-kOf"/>
+                                    <constraint firstItem="epR-0i-uAo" firstAttribute="bottom" secondItem="999-Xa-F8G" secondAttribute="bottom" constant="1000" id="L9u-jr-0Uo"/>
+                                    <constraint firstItem="epR-0i-uAo" firstAttribute="top" secondItem="999-Xa-F8G" secondAttribute="top" id="Or3-6X-bFk"/>
+                                    <constraint firstItem="epR-0i-uAo" firstAttribute="width" secondItem="0Rn-QY-v2r" secondAttribute="width" id="h1C-Nb-j46"/>
+                                    <constraint firstItem="epR-0i-uAo" firstAttribute="leading" secondItem="999-Xa-F8G" secondAttribute="leading" id="md5-vu-FRn"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="999-Xa-F8G"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="0Rn-QY-v2r"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="RpS-i4-nBs" secondAttribute="bottom" id="2bK-x1-Qs7"/>
-                            <constraint firstItem="RpS-i4-nBs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LiL-XS-xrY"/>
-                            <constraint firstItem="RpS-i4-nBs" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="aI9-bI-30h"/>
-                            <constraint firstItem="RpS-i4-nBs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sff-u2-ouP"/>
+                            <constraint firstItem="h6d-Gz-VlZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0y4-ej-9I0"/>
+                            <constraint firstItem="h6d-Gz-VlZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="3qD-pK-BkO"/>
+                            <constraint firstItem="h6d-Gz-VlZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="GoR-oT-rt9"/>
+                            <constraint firstItem="h6d-Gz-VlZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hr5-1d-79Q"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qMM-RX-Fut"/>
+                    <size key="freeformSize" width="375" height="1500"/>
                     <connections>
-                        <outlet property="homeTableView" destination="RpS-i4-nBs" id="VXT-lm-dle"/>
+                        <outlet property="BMChampView" destination="DAc-jT-uP9" id="ack-su-c9b"/>
+                        <outlet property="BMSummonerView" destination="K83-bE-UZG" id="pbp-OC-iEo"/>
+                        <outlet property="champTierView" destination="UpQ-MP-Rsz" id="DRs-cS-oeP"/>
+                        <outlet property="mainView" destination="epR-0i-uAo" id="Yiw-5r-UbS"/>
+                        <outlet property="patchNotesView" destination="10b-2F-mOH" id="z6d-4M-E9Z"/>
+                        <outlet property="summonerView" destination="tFc-6t-RMs" id="kGL-aK-JSF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2016.8" y="-27.339901477832512"/>
+            <point key="canvasLocation" x="2017" y="-281"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Rk6-0S-TX0">
@@ -158,6 +232,9 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EKU-8C-wIV" kind="relationship" relationship="rootViewController" id="zur-je-meU"/>
+                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kmM-TD-fy2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
